--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    buildToolsVersion "26.1.0"
 
     defaultConfig {
         applicationId "alkr.penz.jennyvoiceassistant"
@@ -32,7 +32,8 @@ android {
 dependencies {
     implementation project(':aars')
     implementation project(':models')
-    implementation 'com.androidx.support:appcompat-v7:26.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.core:core:1.3.1'
 }
