--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,9 @@ android {
 
     defaultConfig {
         applicationId "alkr.penz.jennyvoiceassistant"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 30
-        ndkVersion '21.3.6528147'
+        ndkVersion '26'
         versionCode 1
         versionName "1.0"
 
