--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             android:enabled="true"
             android:exported="true" >
         </service>
+        <meta-data android:name="com.rollbar.android.ACCESS_TOKEN"
+            android:value="4936f4d2a0f24cdfa31082da3be70dee" />
     </application>
 
 </manifest>
